Added login with username

--- a/SignalRWebApp/src/app/components/chat/chat.component.html
+++ b/SignalRWebApp/src/app/components/chat/chat.component.html
@@ -1,1 +1,10 @@
-<p>chat works!</p>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span><strong>SignalR Webapp</strong></span>
+    </mat-toolbar-row>
+</mat-toolbar>
+  
+<div class="content">
+  <p class="main-text">Chat</p>
+    Welcome {{name}}!
+</div>
